--- a/index.html
+++ b/index.html
@@ -11,43 +11,50 @@
       <link rel="stylesheet" href="dist/app.css">
       <title>Master Study</title>
    </head>
-   <body id="app">
-      <header>
-         <div class="header-top">
-            <div class="centered">
-               <div id="languages"></div>
-               <div id="nav-bar">
-                  <div id="nav-bar__list"></div>
-                  <div id="nav_bar__icons"></div>
+   <body>
+      <div id="app">
+         <header>
+            <div class="header-top">
+               <div class="centered">
+                  <div id="languages"></div>
+                  <div id="nav-bar">
+                     <div id="nav-bar__list"></div>
+                     <div id="nav_bar__icons"></div>
+                  </div>
                </div>
             </div>
-         </div>
-         <div class="header-bottom">
-            <div class="centered">
-               <div class="logo"></div>
-               <div class="nav-center"></div>
-               <div class="nav-right"></div>
+            <div class="header-bottom">
+               <div class="centered">
+                  <div class="logo"></div>
+                  <div class="nav-center"></div>
+                  <div class="nav-right"></div>
+               </div>
             </div>
-         </div>
-      </header>
-      <main>
-         <div id="investing" class="row-main">
-            <div class="column-left">
-               <h1>Start Investing in You</h1>
-               <h3>With over 1200 courses in 18 subjects, you're guaranteed to find something that's right for you.</h3>
-               <button class="btn btn-blue">JOIN FOR FREE</button>
+         </header>
+         <main>
+            <div id="investing">
+               <div class="centered-70 jumbotron">
+                  <div class="jumbotron-text">
+                     <h1>Start Investing in You</h1>
+                     <h3>With over 1200 courses in 18 subjects, you're guaranteed to find something that's right for you.</h3>
+                     <button class="btn btn-blue">JOIN FOR FREE</button>
+                  </div>
+               </div>
+               <img src="dist/images/base.png" alt="">
             </div>
-            <div class="column-right"></div>
-         </div>
-         <div class="row-main">
-            <div class="column-left">
-               <h1>Limitless learning, more possibilities</h1>
-               <h3>Online courses open the opportunity for learning to almost anyone, regardless of their scheduling commitments.</h3>
-               <button>READ MORE</button>
+            <div id="online-course">
+               <div class="centered-70 jumbotron">
+                  <div class="jumbotron-text">
+                     <h1>Limitless learning, more possibilities</h1>
+                     <h3>Online courses open the opportunity for learning to almost anyone, regardless of their scheduling commitments.</h3>
+                     <button class="btn btn-blue">READ MORE</button>
+                  </div>
+               </div>
             </div>
-            <div class="column-right"></div>
-         </div>
-      </main>
+
+         </main>
+
+      </div>
    </body>
    <script src="app.js" charset="utf-8"></script>
 </html>
