--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <!-- Google Fonts - Open Sans -->
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+      <!-- Font Awesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
       <!-- style -->
       <link rel="stylesheet" href="dist/app.css">
       <title>Master Study</title>
@@ -42,6 +44,44 @@
                </div>
                <img src="dist/images/base.png" alt="">
             </div>
+            <div class="centered-70 blue-card-container">
+               <div class="blue-card">
+                  <i class="fas fa-globe-africa fa-3x"></i>
+                  <h4>Worldwide Recognize</h4>
+                  <p>Our online course certificates can be used around the world and also in most popular universities and companies.</p>
+               </div>
+               <div class="blue-card">
+                  <i class="fas fa-desktop fa-3x"></i>
+                  <h4>Mostly Online Learning (sd)</h4>
+                  <p>Masterstudy online certificates can be obtained in a range of specialized areas and typically take about a year to complete.</p>
+               </div>
+               <div class="blue-card">
+                  <i class="far fa-calendar fa-3x"></i>
+                  <h4>Graduate in as little as 1 Year</h4>
+                  <p>Online post-graduate certificates are a popular way to develop your professional qualifications of Masterstudy</p>
+               </div>
+            </div>
+            <div id="img-gallery" class="centered-70">
+               <div class="row">
+                  <div class="col-2 item-img">
+                     <div class="img-container">
+                        <!-- <img src="dist/images/cat_1-770x375.jpg" alt=""> -->
+                     </div>
+                     <div class="img-text">
+                        hello
+                     </div>
+                  </div>
+                  <div class="col-1 filled">
+                     <div class="top-row item-img"></div>
+                     <div class="bottom-row item-img"></div>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-1 item-img"></div>
+                  <div class="col-1 item-img"></div>
+                  <div class="col-1 item-img"></div>
+               </div>
+            </div>
             <div id="online-course">
                <div class="centered-70 jumbotron">
                   <div class="jumbotron-text">
@@ -51,7 +91,20 @@
                   </div>
                </div>
             </div>
-
+            <div id="reviews">
+               <div class="centered-70">
+                  <div class="flex-container">
+                     <div class="review-info">
+                        <h3>Come as you are</h3>
+                        <p class="review-content">MasterStudy used is an excellent workshop whether you come as a counselor, advisor, administrator, or faculty member. I am going home empowered. I am looking forward to attending the On Course MasterStudy and the MasterStudy National Conference next year and facilitating the use of this excellent retention/student success course at my college.
+                        </p>
+                        <h2>Tim Sab</h2>
+                        <p class="person-info">General Developer, Stylemix Themes</p>
+                        <div class="triangle-right"></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </main>
 
       </div>
