--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="investing">
                <div class="centered-70 jumbotron">
                   <div class="jumbotron-text">
-                     <h1>Start Investing in You</h1>
+                     <h1 class="title-1">Start Investing in You</h1>
                      <h3>With over 1200 courses in 18 subjects, you're guaranteed to find something that's right for you.</h3>
                      <button class="btn btn-blue">JOIN FOR FREE</button>
                   </div>
@@ -85,17 +85,40 @@
             <div id="online-course">
                <div class="centered-70 jumbotron">
                   <div class="jumbotron-text">
-                     <h1>Limitless learning, more possibilities</h1>
+                     <h1 class="title-2">Limitless learning, more possibilities</h1>
                      <h3>Online courses open the opportunity for learning to almost anyone, regardless of their scheduling commitments.</h3>
                      <button class="btn btn-blue">READ MORE</button>
                   </div>
                </div>
             </div>
+            <div id="business">
+
+               <div class="business-card-container">
+                  <div class="business-card">
+                     <img src="dist/images/image_box_1-221x231.png" alt="">
+                     <div class="business-card__right">
+                        <h2 class="title-4">Become an Instructor</h2>
+                        <p>Teach what you love. Masterstudy gives you the tools to create a course.</p>
+                        <button class="btn btn-blue">START TEACHING</button>
+                     </div>
+
+                  </div>
+                  <div class="business-card">
+                     <img src="dist/images/image_box_2-234x231.png" alt="">
+                     <div  class="business-card__right">
+                        <h2 class="title-4">Setup for Business</h2>
+                        <p>Get unlimited access to 2,500 of Udemy’s top courses for your team.</p>
+                        <button class="btn btn-blue">DOING BUSINESS</button>
+                     </div>
+                  </div>
+               </div>
+
+            </div>
             <div id="reviews">
                <div class="centered-70">
                   <div class="flex-container">
                      <div class="review-info">
-                        <h3>Come as you are</h3>
+                        <h3 class="title-4">Come as you are</h3>
                         <p class="review-content">MasterStudy used is an excellent workshop whether you come as a counselor, advisor, administrator, or faculty member. I am going home empowered. I am looking forward to attending the On Course MasterStudy and the MasterStudy National Conference next year and facilitating the use of this excellent retention/student success course at my college.
                         </p>
                         <h2>Tim Sab</h2>
