--- a/index.html
+++ b/index.html
@@ -39,76 +39,93 @@
                   <div class="jumbotron-text">
                      <h1 class="title-1">Start Investing in You</h1>
                      <h3>With over 1200 courses in 18 subjects, you're guaranteed to find something that's right for you.</h3>
-                     <button class="btn btn-blue">JOIN FOR FREE</button>
+                     <button class="btn-rounded btn-blue">JOIN FOR FREE</button>
                   </div>
                </div>
                <img src="dist/images/base.png" alt="">
             </div>
             <div class="centered-70 blue-card-container">
                <div class="blue-card">
-                  <i class="fas fa-globe-africa fa-3x"></i>
-                  <h4>Worldwide Recognize</h4>
+                  <i class="fas fa-globe-africa fa-3x title"></i>
+                  <h4 class="title">Worldwide Recognize</h4>
                   <p>Our online course certificates can be used around the world and also in most popular universities and companies.</p>
                </div>
                <div class="blue-card">
-                  <i class="fas fa-desktop fa-3x"></i>
-                  <h4>Mostly Online Learning (sd)</h4>
+                  <i class="fas fa-desktop fa-3x title"></i>
+                  <h4 class="title">Mostly Online Learning (sd)</h4>
                   <p>Masterstudy online certificates can be obtained in a range of specialized areas and typically take about a year to complete.</p>
                </div>
                <div class="blue-card">
-                  <i class="far fa-calendar fa-3x"></i>
-                  <h4>Graduate in as little as 1 Year</h4>
+                  <i class="far fa-calendar fa-3x title"></i>
+                  <h4 class="title">Graduate in as little as 1 Year</h4>
                   <p>Online post-graduate certificates are a popular way to develop your professional qualifications of Masterstudy</p>
                </div>
             </div>
-            <div id="img-gallery" class="centered-70">
-               <div class="row">
-                  <div class="col-2 item-img">
-                     <div class="img-container">
-                        <!-- <img src="dist/images/cat_1-770x375.jpg" alt=""> -->
-                     </div>
-                     <div class="img-text">
-                        hello
-                     </div>
-                  </div>
-                  <div class="col-1 filled">
-                     <div class="top-row item-img"></div>
-                     <div class="bottom-row item-img"></div>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-1 item-img"></div>
-                  <div class="col-1 item-img"></div>
-                  <div class="col-1 item-img"></div>
-               </div>
-            </div>
+
             <div id="online-course">
                <div class="centered-70 jumbotron">
                   <div class="jumbotron-text">
                      <h1 class="title-2">Limitless learning, more possibilities</h1>
                      <h3>Online courses open the opportunity for learning to almost anyone, regardless of their scheduling commitments.</h3>
-                     <button class="btn btn-blue">READ MORE</button>
+                     <button class="btn-rounded btn-blue">READ MORE</button>
                   </div>
                </div>
             </div>
-            <div id="business">
+            <!-- RECENT COURSES -->
+            <div id="recent-courses">
+               <div class="title-box">
+                  <h2 class="title title-3">Recent Courses</h2>
+               </div>
+            </div>
+            <!-- NUMBERS -->
+            <div id="numbers">
+               <div class="title-box">
+                  <h2 class="title title-3">We are Proud</h2>
+                  <p class="paragraph-1">Certificate courses are instructed by highly educated and qualified instructors who hold doctoral and master’s level degrees.</p>
+               </div>
+            </div>
+            <div id="subscribe">
+               <div class="centered-70">
+                  <div class="col-left">
+                     <div class="title title-4">Subscribe our newsletter</div>
+                     <p class="paragraph-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                  </div>
+                  <div class="col-right">
+                     <div class="title">YOUR EMAIL ADDRESS</div>
+                     <div id="input-container" class="flex">
+                        <input placeholder="Enter your E-mail">
+                        <button class="btn-blue">SUBSCRIBE</button>
+                     </div>
 
+
+                  </div>
+               </div>
+            </div>
+            <!-- POPULAR COURSES -->
+            <div id="popular-courses">
+               <div class="title-box">
+                  <h2 class="title title-3">Popular Courses</h2>
+                  <p class="paragraph-1">Discover our most popular courses for self learning</p>
+               </div>
+
+            </div>
+            <!-- BUSINESS -->
+            <div id="business">
                <div class="business-card-container">
                   <div class="business-card">
                      <img src="dist/images/image_box_1-221x231.png" alt="">
                      <div class="business-card__right">
-                        <h2 class="title-4">Become an Instructor</h2>
-                        <p>Teach what you love. Masterstudy gives you the tools to create a course.</p>
-                        <button class="btn btn-blue">START TEACHING</button>
+                        <h2 class="title title-4">Become an Instructor</h2>
+                        <p class="title paragraph-1">Teach what you love. Masterstudy gives you the tools to create a course.</p>
+                        <button class="btn-rounded btn-blue">START TEACHING</button>
                      </div>
-
                   </div>
                   <div class="business-card">
                      <img src="dist/images/image_box_2-234x231.png" alt="">
                      <div  class="business-card__right">
-                        <h2 class="title-4">Setup for Business</h2>
-                        <p>Get unlimited access to 2,500 of Udemy’s top courses for your team.</p>
-                        <button class="btn btn-blue">DOING BUSINESS</button>
+                        <h2 class="title title-4">Setup for Business</h2>
+                        <p class="title paragraph-1">Get unlimited access to 2,500 of Udemy’s top courses for your team.</p>
+                        <button class="btn-rounded btn-blue">DOING BUSINESS</button>
                      </div>
                   </div>
                </div>
@@ -118,8 +135,8 @@
                <div class="centered-70">
                   <div class="flex-container">
                      <div class="review-info">
-                        <h3 class="title-4">Come as you are</h3>
-                        <p class="review-content">MasterStudy used is an excellent workshop whether you come as a counselor, advisor, administrator, or faculty member. I am going home empowered. I am looking forward to attending the On Course MasterStudy and the MasterStudy National Conference next year and facilitating the use of this excellent retention/student success course at my college.
+                        <h3 class="title title-4">Come as you are</h3>
+                        <p class="paragraph-1 title">MasterStudy used is an excellent workshop whether you come as a counselor, advisor, administrator, or faculty member. I am going home empowered. I am looking forward to attending the On Course MasterStudy and the MasterStudy National Conference next year and facilitating the use of this excellent retention/student success course at my college.
                         </p>
                         <h2>Tim Sab</h2>
                         <p class="person-info">General Developer, Stylemix Themes</p>
@@ -129,7 +146,6 @@
                </div>
             </div>
          </main>
-
       </div>
    </body>
    <script src="app.js" charset="utf-8"></script>
