--- a/index.html
+++ b/index.html
@@ -74,14 +74,37 @@
             <!-- RECENT COURSES -->
             <div id="recent-courses">
                <div class="title-box">
-                  <h2 class="title title-3">Recent Courses</h2>
+                  <h2 class="title title-2">Recent Courses</h2>
                </div>
             </div>
             <!-- NUMBERS -->
             <div id="numbers">
                <div class="title-box">
-                  <h2 class="title title-3">We are Proud</h2>
+                  <h2 class="title title-2">We are Proud</h2>
                   <p class="paragraph-1">Certificate courses are instructed by highly educated and qualified instructors who hold doctoral and master’s level degrees.</p>
+               </div>
+               <div id="numbers-info">
+                  <div class="centered-70">
+                     <ul>
+                        <li>
+                           <div class="nmb title">2000</div>
+                           <div class="sub-nmb">STUDENTS</div>
+                        </li>
+                        <li>
+                           <div class="nmb title">950</div>
+                           <div class="sub-nmb">COURSES</div>
+                        </li>
+                        <li>
+                           <div class="nmb title">1600</div>
+                           <div class="sub-nmb">HOURS VIDEO</div>
+                        </li>
+                        <li>
+                           <div class="nmb title">150</div>
+                           <div class="sub-nmb">COUNTRIES REACHED</div>
+                        </li>
+                     </ul>
+                  </div>
+
                </div>
             </div>
             <div id="subscribe">
@@ -96,15 +119,13 @@
                         <input placeholder="Enter your E-mail">
                         <button class="btn-blue">SUBSCRIBE</button>
                      </div>
-
-
                   </div>
                </div>
             </div>
             <!-- POPULAR COURSES -->
             <div id="popular-courses">
                <div class="title-box">
-                  <h2 class="title title-3">Popular Courses</h2>
+                  <h2 class="title title-2">Popular Courses</h2>
                   <p class="paragraph-1">Discover our most popular courses for self learning</p>
                </div>
 
