Cards and navbar

--- a/index.html
+++ b/index.html
@@ -80,10 +80,19 @@
                <div class="title-box">
                   <h2 class="title title-2">Recent Courses</h2>
                </div>
+               <div class="courses-nav-bar">
+                  <ul>
+                     <li class="active">All Categories</li>
+                     <li v-for="type in courseTypes.slice(0,6)">{{ type }}</li>
+                  </ul>
+               </div>
                <div class="course-card__container">
                   <div v-for="course in recentCoursesList" class="course-card">
                      <div class="course-card__img">
                         <img :src="'dist/images/courses/' + course.imgUrl" alt="">
+                        <div v-if="course.release" class="release" :class="course.release">
+                           {{ course.release }}
+                        </div>
                      </div>
                      <div class="course-card__info">
                         <div class="course-card__top">
@@ -96,8 +105,8 @@
                               {{ course. discount }}
                            </div>
                            <div v-if="course.stars">
-                              <i v-for="i in course.stars" class="fas fa-star course-star"></i>
-                              <i v-for="i in (5 - course.stars)"class="far fa-star"></i>{{course.stars}}
+                              <i v-for="i in course.stars" class="fas fa-star course-star star"></i>
+                              <i v-for="i in (5 - course.stars)"class="far fa-star star"></i>{{course.stars}}
                            </div>
                            <div class="course-hours" v-else>
                               <i class="far fa-clock"></i> {{ course.hours}} hours
@@ -111,6 +120,9 @@
                   </div>
                   <!-- TRY TO FIND ANOTHER SOLUTION -->
                   <div class="course-card placeholder" v-for="item in 6"></div>
+               </div>
+               <div class="btn-container">
+                  <button class="btn-rounded btn-blue">SHOW ALL</button>
                </div>
             </div>
             <!-- NUMBERS -->
@@ -165,8 +177,40 @@
                   <h2 class="title title-2">Popular Courses</h2>
                   <p class="paragraph-1">Discover our most popular courses for self learning</p>
                </div>
-               <div class="flex">
+               <div class="course-card__container">
+                  <div v-for="course in popularCoursesList" class="course-card">
+                     <div class="course-card__img">
+                        <img :src="'dist/images/courses/' + course.imgUrl" alt="">
+                        <div v-if="course.release" class="release" :class="course.release">
+                           {{ course.release }}
+                        </div>
+                     </div>
+                     <div class="course-card__info">
+                        <div class="course-card__top">
+                           <div class="course-type">{{ course.type }}</div>
+                           <div class="course-title">{{ course.title }}</div>
+                        </div>
 
+                        <div class="course-card__bottom">
+                           <div class="course-discount" v-if="course.discount">
+                              {{ course. discount }}
+                           </div>
+                           <div v-if="course.stars">
+                              <i v-for="i in course.stars" class="fas fa-star course-star star"></i>
+                              <i v-for="i in (5 - course.stars)"class="far fa-star star"></i>{{course.stars}}
+                           </div>
+                           <div class="course-hours" v-else>
+                              <i class="far fa-clock"></i> {{ course.hours}} hours
+                           </div>
+                           <div v-if="course.price" class="course-price">
+                              {{course.price}}
+                           </div>
+
+                        </div>
+                     </div>
+                  </div>
+                  <!-- TRY TO FIND ANOTHER SOLUTION -->
+                  <div class="course-card placeholder" v-for="item in 6"></div>
                </div>
             </div>
             <!-- BUSINESS -->
