--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                   <!-- TRY TO FIND ANOTHER SOLUTION -->
                   <div class="course-card placeholder" v-for="item in 6"></div>
                </div>
+               <div class="arrow-container">
+                  <i class="fas fa-chevron-left arrow"></i>
+                  <i class="fas fa-chevron-right arrow"></i>
+               </div>
             </div>
             <!-- BUSINESS -->
             <div id="business">
