--- a/index.html
+++ b/index.html
@@ -44,14 +44,20 @@
             </div>
             <div class="centered flex nav-bar">
                <img src="dist/images/MasterStudy_logo.svg" alt="">
-               <div id="search-bar">
-                  <div id="category">
+               <div id="search-bar" class="flex">
+                  <div id="category" class="flex">
                      <i class="fas fa-bars"></i>
                      <p>CATEGORY</p>
                   </div>
                   <div id="search-container" class="flex">
-                     <input placeholder="Search courses">
-                     <i class="fas fa-search"></i>
+                     <div class="left">
+                        <input placeholder="Search courses">
+                     </div>
+                     <div class="right">
+                        <i class="fas fa-search"></i>
+                     </div>
+
+
                   </div>
                </div>
                <div>
