--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
                      <div class="right">
                         <i class="fas fa-search"></i>
                      </div>
-
-
                   </div>
                </div>
                <div>
@@ -111,6 +109,77 @@
                      <h1 class="title-2">Limitless learning, more possibilities</h1>
                      <h3>Online courses open the opportunity for learning to almost anyone, regardless of their scheduling commitments.</h3>
                      <button class="btn-rounded btn-blue">READ MORE</button>
+                  </div>
+               </div>
+            </div>
+            <div id="course-gallery" class="centered-70">
+               <div class="row-gallery">
+                  <div class="col-2">
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_1-770x375.jpg" alt="">
+                        </div>
+                        <div class="item-info">
+                           <a href="">Software Developoment</a>
+                           <span>5 Courses</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-1 col-special">
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_2-370x155.jpg" alt="">
+                        </div>
+                        <div class="item-info">
+                           <a href="">Art</a>
+                           <span>8 Courses</span>
+                        </div>
+                     </div>
+
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_3-370x155.jpg" alt="">
+                        </div>
+                        <div class="item-info">
+                           <a href="">Material Design</a>
+                           <span>5 Courses</span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="row-gallery">
+                  <div class="col-1">
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_4-370x155.jpg" alt="">
+                        </div>
+                        <div class="item-info">
+                           <a href="">Music</a>
+                           <span>5 Courses</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-1">
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_5-370x155.jpg" alt="">
+                           </div>
+                        <div class="item-info">
+                           <a href="">Exercise</a>
+                           <span>7 Courses</span>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-1">
+                     <div class="gallery-item">
+                        <div class="img-container">
+                           <img src="dist/images/cat_6-370x155.jpg" alt="">
+                        </div>
+                        <div class="item-info">
+                           <a href="">Photography</a>
+                           <span>4 Courses</span>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
