--- a/index.html
+++ b/index.html
@@ -251,19 +251,19 @@
                <div id="numbers-info">
                   <ul class="clearList centered-small">
                      <li>
-                        <div class="nmb">2000</div>
+                        <div class="nmb">{{nmbStudents}}</div>
                         <div class="sub-nmb">STUDENTS</div>
                      </li>
                      <li>
-                        <div class="nmb">950</div>
+                        <div class="nmb">{{nmbCourses}}</div>
                         <div class="sub-nmb">COURSES</div>
                      </li>
                      <li>
-                        <div class="nmb">1600</div>
+                        <div class="nmb">{{nmbHours}}</div>
                         <div class="sub-nmb">HOURS VIDEO</div>
                      </li>
                      <li>
-                        <div class="nmb">150</div>
+                        <div class="nmb">{{nmbCountries}}</div>
                         <div class="sub-nmb">COUNTRIES REACHED</div>
                      </li>
                   </ul>
